--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <br>
     <nav>
-    <a href="microsoft.html">Microsoft office page</a>
+    <a href="index.html">Microsoft office page</a>
     &nbsp;
     <a href="userinfo.html" target="_blank">Application form</a>
     </nav>
